<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
    </parent>

    <groupId>com.ebsolutions.eventsadminservice</groupId>
    <artifactId>events-admin-service-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>app</module>
    </modules>

    <properties>
        <!-- This is the property that is propagated to all children modules -->
        <revision>0.25.0</revision>

        <java.version>21</java.version>

        <!-- Versions: Plugins -->
        <checkstyle-maven-plugin.version>3.5.0</checkstyle-maven-plugin.version>
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <flatten-maven-plugin.version>1.7.0</flatten-maven-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.4.1</maven-enforcer-plugin.version>
        <openapi-generator-maven-plugin.version>7.5.0</openapi-generator-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <!-- Allows for a single version to be declared in parent pom -->
                <!-- Version: Parent POM PIM -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!-- Allows for a single version to be declared in parent pom -->
                <!-- Version: Explicit -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                </plugin>
                <!-- Used to compile the sources of your project -->
                <!-- Version: Explicit -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <!-- Using to suppress MockBean warnings -->
                        <showWarnings>false</showWarnings>
                    </configuration>
                </plugin>
                <!-- Used to execute commands on the command line -->
                <!-- For this case, it builds the Docker image -->
                <!-- Version: Explicit -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <!-- Maintains strict Code Styles -->
                <!-- Version: Explicit -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${checkstyle-maven-plugin.version}</version>
                    <configuration>
                        <configLocation>google_checks.xml</configLocation>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Generates Java classes from OpenAPI contracts -->
                <!-- Version: Explicit -->
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                    <configuration>
                        <modelPackage>com.ebsolutions.eventsadminservice.model</modelPackage>
                        <generatorName>spring</generatorName>
                        <generateApis>false</generateApis>
                        <generateSupportingFiles>false</generateSupportingFiles>
                        <configOptions>
                            <serializableModel>true</serializableModel>
                            <useSpringBoot3>true</useSpringBoot3>
                            <additionalModelTypeAnnotations>
                                @lombok.experimental.SuperBuilder
                            </additionalModelTypeAnnotations>
                        </configOptions>
                        <!-- typeMappings links the contract (left side) to the right side -->
                        <typeMappings>
                            <!-- This Pascal format is the standard for baked in OpenAPI supported types -->
                            <typeMapping>DateTime=LocalDateTime</typeMapping>
                            <!-- Kebab format is the format for custom mappings  -->
                            <typeMapping>local-date=LocalDate</typeMapping>
                            <typeMapping>local-time=LocalTime</typeMapping>
                            <typeMapping>day-of-week=DayOfWeek</typeMapping>
                        </typeMappings>
                        <!-- importMappings then links the typeMapping (left side) to a Java import (right side) -->
                        <importMappings>
                            <!-- Left side in importMappings maps to the right side in typeMappings -->
                            <importMapping>LocalDateTime=java.time.LocalDateTime</importMapping>
                            <importMapping>LocalDate=java.time.LocalDate</importMapping>
                            <importMapping>LocalTime=java.time.LocalTime</importMapping>
                            <importMapping>DayOfWeek=java.time.DayOfWeek</importMapping>
                        </importMappings>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <scm>
        <connection>scm:git@github.com:aaronsisler/applications.events-admin.events-admin-ui.git</connection>
        <developerConnection>scm:git@github.com:aaronsisler/applications.events-admin.events-admin-ui.git
        </developerConnection>
        <url>https://github.com/aaronsisler/applications.events-admin.events-admin-service</url>
    </scm>

    <developers>
        <developer>
            <id>aaron-sisler</id>
            <name>Aaron Sisler</name>
            <email>aaron.sisler@eandbsolutions.com</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
    </developers>
</project>
